tp-1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
spec:
  host: correction-nginx.apps.openshift.kakor.ovh
  port:
    targetPort: 80
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None

#Alternative Ingress sur OKD 

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx
# spec:
#   rules:
#     - host: nginx-correction.apps.openshift.kakor.ovh
#       http:
#         paths:
#         - path: ''
#           pathType: ImplementationSpecific
#           backend:
#             service:
#               name: nginx
#               port:
#                 number: 80
#   tls:
#   - {}
